--- a/indx.html
+++ b/indx.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
-    <div class="main-screen" onclick="toggleMenu()"></div>
-
+    <div class="main-screen" onclick="onToggleMenu()"></div>
+    <div class="screen-modal"></div>
+    
     <header class="main-header">
         <div class="header-box text-center flex">
             <div class="logo">Blogin<span class="green">.</span></div>
@@ -24,7 +25,7 @@
                     <li><a href="#">Work</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-                <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+                <button class="menu-toggle" onclick="onToggleMenu()">☰</button>
             </nav>
 
         </div>
@@ -43,7 +44,7 @@
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                     pariatur...
                 </p>
-                <button class="btn-modal">Continue Reading<span class="arrow">&rarr;</span></button>
+                <button class="btn-modal" onclick="onOpenModal()">Continue Reading<span class="arrow">&rarr;</span></button>
             </div>
         </div>
         <div class="card flex">
@@ -58,7 +59,7 @@
                     pariatur...
                 </p>
 
-                <button class="btn-modal">Continue Reading<span class="arrow">&rarr;</span></button>
+                <button class="btn-modal" onclick="onOpenModal()">Continue Reading<span class="arrow">&rarr;</span></button>
             </div>
         </div>
         <div class="card flex">
@@ -73,7 +74,7 @@
                     pariatur...
                 </p>
 
-                <button class="btn-modal">Continue Reading <span class="arrow">&rarr;</span></button>
+                <button class="btn-modal" onclick="onOpenModal()">Continue Reading <span class="arrow">&rarr;</span></button>
             </div>
         </div>
         <div class="paging">
@@ -96,16 +97,20 @@
             <li><a class="dr fa-brands fa-square-dribbble" href="https://www.facebook.com/"></a></li>
         </ul>
     </footer>
+    <div class="modal-data flexC">
+        <h2 class="card-title">Duis aute irure dolor in henderit in voluptate.</h2>
+        <p class="">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex
+            ea commo doconsequat, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <br><br>
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur...
+        </p>
+        <button class="modal-btn-close pointer" onclick="onCloseModal()">close</button>
 
 
-
-    <script>
-        function toggleMenu() {
-            document.body.classList.toggle('menu-open')
-        }
-    </script>
+    </div>
+    <script src="js/modal-services.js"></script>
 </body>
 
 </html>
-
-
