--- a/indx.html
+++ b/indx.html
@@ -14,13 +14,13 @@
 <body>
     <div class="main-screen" onclick="onToggleMenu()"></div>
     <div class="screen-modal"></div>
-    
+
     <header class="main-header">
         <div class="header-box text-center flex">
             <div class="logo">Blogin<span class="green">.</span></div>
             <nav class="main-nav">
                 <ul class="list-clean flex">
-                    <li><a href="#">Journal</a></li>
+                    <li><a href="#" class="active">Journal</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Work</a></li>
                     <li><a href="#">Contact</a></li>
@@ -39,11 +39,13 @@
                 <p class="">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                     ex
                     ea commo doconsequat, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    <br><br>
+                </p>
+                <p>
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                     pariatur...
                 </p>
-                <button class="btn-modal" onclick="onOpenModal()">Continue Reading<span class="arrow">&rarr;</span></button>
+                <button class="btn-modal" onclick="onOpenModal()">Continue Reading<span
+                        class="arrow">&rarr;</span></button>
             </div>
         </div>
         <div class="card flex">
@@ -53,12 +55,14 @@
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                     ex
                     ea commo doconsequat, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    <br><br>
+                </p>
+                <p>
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                     pariatur...
                 </p>
 
-                <button class="btn-modal" onclick="onOpenModal()">Continue Reading<span class="arrow">&rarr;</span></button>
+                <button class="btn-modal" onclick="onOpenModal()">Continue Reading<span
+                        class="arrow">&rarr;</span></button>
             </div>
         </div>
         <div class="card flex">
@@ -68,12 +72,13 @@
                 <p class="">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                     ex
                     ea commo doconsequat, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    <br><br>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                </p>
+                <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                     pariatur...
                 </p>
 
-                <button class="btn-modal" onclick="onOpenModal()">Continue Reading <span class="arrow">&rarr;</span></button>
+                <button class="btn-modal" onclick="onOpenModal()">Continue Reading <span
+                        class="arrow">&rarr;</span></button>
             </div>
         </div>
         <div class="paging">
